--- a/css/Cart_Box.css
+++ b/css/Cart_Box.css
@@ -15,6 +15,17 @@
   grid-gap: 1rem;
 }
 
+.cartItem {
+  /* border: 1px solid #007bff; */
+  /* height: 200px; */
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+
+  font-size: 1.7vw;
+}
+
+
 .image_height {
   height: 15vw;
   margin: auto;
@@ -26,15 +37,6 @@
   max-height: 100%;
 }
 
-.cartItem {
-  border: 1px solid #007bff;
-  /* height: 200px; */
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  align-items: center;
-
-  font-size: 1.7vw;
-}
 
 @media screen and (max-width: 768px) {
   .cartItem {
