--- a/css/Dark footer.css
+++ b/css/Dark footer.css
@@ -1,10 +1,10 @@
 
-* {
+footer * {
   box-sizing: border-box;
 
 }
 
-.flex-container {
+footer .flex-container {
   /* background-color: rgba(0, 0, 0, 0.726); */
   color: whitesmoke;
   
@@ -14,49 +14,49 @@
   text-align: center;
 }
 
-.flex-item-left {
+footer .flex-item-left {
   
   padding: 10px;
   flex: 50%;
 }
 
-.flex-item-right {
+footer.flex-item-right {
   
   padding: 10px;
   flex: 50%;
 }
 
 
-ul {
+footer ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
 }
   
-  li a, .dropbtn {
+footer li a, .dropbtn {
     display: inline-block;
     /* color: rgb(236, 76, 76); */
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
   }
-  .dropdown-content a{
+  footer .dropdown-content a{
       font-size: large;
   }
 
   
-  li.dropdown {
+  footer li.dropdown {
     display: inline-block;
   }
   
-  .dropdown-content {
+  footer .dropdown-content {
    
     position: static;
    
   }
   
-  .dropdown-content a {
+  footer .dropdown-content a {
     color: whitesmoke;
     padding: 12px 16px;
     text-decoration: none;
@@ -66,23 +66,23 @@ ul {
   
   /* .dropdown-content a:hover {background-color: #f1f1f1;} */
   
-  .dropdown:hover .dropdown-content {
+  footer .dropdown:hover .dropdown-content {
     display: block;
   }
-  .fab{
+  footer .fab{
       color: rgba(247, 102, 6, 0.87);
   }
-  .fa-caret-down{
+  footer .fa-caret-down{
      visibility: hidden;
   }
 @media (max-width: 800px) {
-  .flex-container {
+  footer .flex-container {
     flex-direction: column;
   }
-  .dropdown-content{
+  footer .dropdown-content{
       display: none;
   }
-  .fa-caret-down{
+  footer .fa-caret-down{
     visibility: visible;
    }
   
